# cutomer_care

./: .dockerignore  .gitignore  Cargo.toml  Jenkinsfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  log4rs.yaml  questions.json
.github/workflows/: audit.yaml  style.yaml
.postman/: customer_care.postman_collection.json
Docker/: compose.build.yaml  compose.ci.yaml  compose.dev.build.yaml  compose.dev.yaml  compose.yaml  docker-compose.dev.yaml  docker-compose.yaml  init.sql
Docker/builder/: rust.Dockerfile
Docker/server/: server.Dockerfile  server.dev.Dockerfile
error_handling/: Cargo.toml  Makefile
error_handling/src/: lib.rs
jenkins/: Jenkinsfile  Jenkinsfile.feature
migrations/: 20221107094301_questions_table.down.sql  20221107094301_questions_table.up.sql  20221109162808_intial_users_and_questions.down.sql  20221109162808_intial_users_and_questions.up.sql
src/: main.rs  store.rs  text_processing.rs
src/auth/: base.rs  jwt.rs  mod.rs
src/auth_providers/: base.rs  jwt.rs  mod.rs
src/aux/: mod.rs
src/handlers/: auth.rs  mod.rs  questions.rs  users.rs
src/routes/: auth.rs  mod.rs  questions.rs  users.rs
src/storage/: base.rs  mod.rs  questions.rs
src/store/: base.rs  mod.rs  questions.rs  users.rs
src/types/: auth.rs  mod.rs  pagination.rs  question.rs  shared.rs  user.rs
tests/: run_tests.sh
tests/tests/: users_auth_questions_crud.sh
