[package]
name = "customer_care"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
parking_lot = "0.10.0"
tokio = { version= "1", features = ["full"] }
serde = { version="1", features = ["derive"] }
serde_json = "1"
uuid = { version="1.2.1", features= ["v4"] }
error_handling = { version="0.1.0", path="error_handling"}