[package]
name = "customer_care"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version= "1", features = ["full"] }
serde = { version="1", features = ["derive"] }
uuid = { version="1.2.1", features= ["v4"] }
error_handling = { version="0.1.0", path="error_handling" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.2"
sqlx = { version = "0.6", features = [  "runtime-tokio-rustls", "postgres", "migrate" ] }
dotenvy = "0.15.6"
reqwest = "0.11"